src/test/ui/resolve/resolve-label.stderr
error[E0426]: use of undeclared label `'l`
  --> $DIR/resolve-label.rs:5:23
   |
LL |                 break 'l;
   |                       ^^ undeclared label `'l`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0426`.
